I fixed a small bug in which the page would not scroll to accomodate the new content. Also changed a bit of style on the cards to give them better size and spacing. This still needs to be reworked into Backbone.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -22,7 +22,12 @@ input {
     text-align: center;
 }
 
-.card {}
+.card {
+	padding: 15px;
+	margin: 15px;
+	width: 240px;
+	height: 360px;
+}
 
 .card.small { width: 160px; height: 240px;}
 .card.medium { width: 200px; height: 300px;}
@@ -33,6 +38,10 @@ input {
 
 .clear {
     clear: both;
+}
+
+#sb-site {
+	overflow: auto;
 }
 
 #container {
